# project-smartplanning-camera-dev

./: .gitignore  README.md  YOLOv8_Classes.md  config.json  configurable_detector.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  start.sh  stop.sh
backend/: .gitignore  Dockerfile  config.json  main.py  requirements.txt
backend/camera_detection/: __init__.py  configurable_detector.py
camera_detection/: configurable_detector.py
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: DetectionStep.tsx  PreviewStep.tsx  ProgressIndicator.tsx  UploadStep.tsx
logic_base/: config.json  pyproject.toml
