[project]
name = "camera-detection"
version = "0.1.0"
description = "カメラ検知システム"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python==4.8.1.78",
    "ultralytics==8.0.196",
    "numpy==1.24.3",
    "matplotlib==3.7.2",
    "Pillow==10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []